--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{scrartcl}
+\documentclass{book}
 % import packages
 \input{preamble/packages.tex}
 % import commands
@@ -40,11 +40,11 @@
   \tableofcontents
   
   \newpage
-  \section{Einleitung}\label{sec:Einleitung}
+  \section{Einleitung}\label{cha:Einleitung}
     \input{\subtexdir/einleitung.tex}
   
   \newpage
-  \section{Elektrostatik}\label{sec:Elektrostatik}
+  \chapter{Elektrostatik}\label{cha:Elektrostatik}
     \input{\subtexdir/elektrostatik.tex}
   
   %\newpage
