--- a/preamble/commands.tex
+++ b/preamble/commands.tex
@@ -7,3 +7,9 @@
 %\newcommand{\EXP}[1]{\langle#1\rangle} 
 %\newcommand{\x}{\cdot} 
 
+\newcommand{\green}[1][]{G_{#1}(\vb*r,\vb*r')}
+\newcommand{\dA}{d\vb A}
+\newcommand{\ddA}{\cdot d\vb A}
+\newcommand{\vr}{\vb*r}
+\newcommand{\rr}{\abs{\vb*r-\vb*r'}}
+\newcommand{\frr}[1][1]{\frac{#1}{\abs{\vb*r-\vb*r'}}}
