--- a/subtex/elektrostatik.tex
+++ b/subtex/elektrostatik.tex
@@ -1,25 +1,32 @@
-\subsection{Ladungen und Ladungsverteilungen}%
+\section{Ladungen und Ladungsverteilungen}%
 \label{sub:Ladungen-und-Ladungsverteilungen}
 \input{\subtexdir/elektrostatik/ladungen-und-ladungs-verteilungen.tex}
 
 \newpage
-\subsection{Elektrische Kraft, Elektrisches Feld und Elektrisches Potential}%
+\section{Elektrische Kraft, Elektrisches Feld und Elektrisches Potential}%
 \label{sub:Ladungen-und-Ladungsverteilungen}
 \input{\subtexdir/elektrostatik/elektrisches-feld-und-elektrisches-potential.tex}
 
 \newpage
-\subsection{Multipolentwicklung}%
+\section{Multipolentwicklung}%
 \label{sub:Multipolentwicklung}
 \input{\subtexdir/elektrostatik/multipolentwicklung.tex}
 
 \newpage
-\subsection{Verhalten von Elektrostatische Felder an Randflächen}%
+\section{Verhalten von Elektrostatische Felder an Randflächen}%
+\label{sub:randflaechen}
+\input{\subtexdir/elektrostatik/randflaechen.tex}
 
 \newpage
-\subsection{Lösung der Poisson Gleichung und Greensche Funktion}%
+\section{Lösung der Poisson Gleichung und Greensche Funktion}%
+\label{sub:poisson-green}
+\input{\subtexdir/elektrostatik/poisson-green.tex}
 
 \newpage
-\subsection{Spiegelladungsmethode}%
+\section{Spiegelladungsmethode}%
 
 \newpage
-\subsection{Elektrostatik in Materie}%
+\section{Elektrostatik in Materie}%
+
+\newpage
+\section{Energie von Elektrostatische Felder}%
