--- a/preamble/variables.tex
+++ b/preamble/variables.tex
@@ -1,5 +1,9 @@
 \newcommand{\thetitle}{Zusammenfassung Theoretische Physik II:\@ Elektrodynamik}
+
 \newcommand{\theAuthor}{Luc Jean Bert Kusters}
 \newcommand{\BAenddatemonth}{September 2020}
 
 \newcommand{\subtexdir}{subtex}
+
+\setcounter{tocdepth}{2}
+\counterwithin{equation}{subsection}
