--- a/subtex/elektrostatik.tex
+++ b/subtex/elektrostatik.tex
@@ -23,10 +23,11 @@
 \input{\subtexdir/elektrostatik/poisson-green.tex}
 
 \newpage
-\section{Spiegelladungsmethode}%
+\section{Elektrostatische Energie}%
+\label{sub:elektrostatische-energie}
+\input{\subtexdir/elektrostatik/elektrostatische-energie.tex}
 
 \newpage
 \section{Elektrostatik in Materie}%
+\input{\subtexdir/elektrostatik/elektrostatik-in-materie.tex}
 
-\newpage
-\section{Energie von Elektrostatische Felder}%
