--- a/subtex/elektrostatik/multipolentwicklung.tex
+++ b/subtex/elektrostatik/multipolentwicklung.tex
@@ -24,7 +24,7 @@ Eine allgemeine mehrdimensionale Taylorentwicklung wird gegeben durch:
   f(\vb*\alpha, \vb*\beta)
   =\qty(\exp(\vb*\beta\cdot\nabla_{\vb*\beta'})
   f(\vb*\alpha, \vb*\beta'))
-  \bigg|_{\vb*\beta=\vb*\beta_0}
+  \bigg|_{\vb*\beta'=\vb*\beta_0}
   =\qty(\sum_{n=0}^\infty
   \frac{(\vb*\beta\cdot\nabla_{\vb*\beta'})^n}{n!}
   f(\vb*\alpha, \vb*\beta'))
