--- a/preamble/variables.tex
+++ b/preamble/variables.tex
@@ -6,4 +6,4 @@
 \newcommand{\subtexdir}{subtex}
 
 \setcounter{tocdepth}{1}
-\counterwithin{equation}{subsection}
+\counterwithin{equation}{section}
