--- a/subtex/elektrostatik.tex
+++ b/subtex/elektrostatik.tex
@@ -31,3 +31,7 @@
 \section{Elektrostatik in Materie}%
 \input{\subtexdir/elektrostatik/elektrostatik-in-materie.tex}
 
+\newpage
+\section{Formelzettel}%
+\input{\subtexdir/elektrostatik/formelzettel.tex}
+
