--- a/subtex/elektrostatik/multipolentwicklung.tex
+++ b/subtex/elektrostatik/multipolentwicklung.tex
@@ -262,7 +262,7 @@ Im Innenraum ($r\approx 0$):
 \end{equation}
 \begin{center}
   mit $\ds q_<^{lm}=\int_0^\infty dr' {r'}^{1-l}
-  \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r)$
+  \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r')$
 \end{center}
 \noindent
 Im Außenraum ($r\gg0$):
@@ -278,5 +278,5 @@ Im Außenraum ($r\gg0$):
 \end{equation}
 \begin{center}
   mit $\ds q_>^{lm}=\int_0^\infty dr' {r'}^{l+2}
-  \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r)$
+  \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r')$
 \end{center}
