adds kontinuitaetsgleichung of magnetostatik chapter

--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@
   
   \newpage
   \chapter{Magnetostatik}\label{cha:Magnetostatic}
-  %  \input{\subtexdir/magnetostatik.tex}
+    \input{\subtexdir/magnetostatik.tex}
   
   \newpage
   \chapter{Elektrodynamik}\label{cha:elektrodynamik}
