--- a/subtex/elektrostatik/formelzettel.tex
+++ b/subtex/elektrostatik/formelzettel.tex
@@ -5,44 +5,120 @@
 
 \subsection{Elektrische Kraft, Elektrisches Feld und Elektrisches Potential}%
 \begin{multicols}{2}
-\noindent
-Coulombkraft einer Punktladung im äußeren E-Feld
-\begin{equation*}
-  \vb F_c(\vr) = q\vb E(\vr)
-\end{equation*}
-
-\noindent
-Zusammenhang E-Feld und Elektrisches Potential
-\begin{equation*}
-  \vb E = -\grad\phi(\vr)
-\end{equation*}
-
-\noindent
-Berechnung des E-Feld und Potential aus Ladungsverteilung 
-\begin{equation*}
-  \begin{split}
-    \phi(\vr)&=\int d^3r' \frac{\rho(\vr')}{\rr}\\
-    \vb E(\vr)&=\int d^3r' \rho(\vr')\frac{(\vr-\vr')}{\rr^3}\\
-  \end{split}
-\end{equation*}
-
-\noindent
-Feldgleichungen der E-Statik
-\begin{equation*}
-  \begin{split}
-    \div\vb E &= 4\pi k \rho(\vr)\\ 
-    \curl\vb E &= 0\\ 
-  \end{split}
-\end{equation*}
-
-\noindent
-Poisson-Gleichung
-\begin{equation*}
-  \Delta\phi(\vr) = -4\pi k \rho(\vr)
-\end{equation*}
+  \noindent
+  \begin{tabular}{p{4.5cm}p{5cm}}
+    Coulombkraft Punktladung im äußeren E-Feld
+    & 
+    $\displaystyle \vb F_c(\vr) = q\vb E(\vr)$ 
+    \\\\
+    Zusammenhang E-Feld und Pot.
+    &
+    $\displaystyle \vb E = -\grad\phi(\vr)$
+    \\\\
+    Poisson-Gleichung
+    & 
+    \(\displaystyle
+      \Delta\phi(\vr) = -4\pi k \rho(\vr)
+    \)\\\\
+    Feldgleichungen der E-Statik
+    & 
+    \(\displaystyle
+    \div\vb E = 4\pi k \rho(\vr)
+    \)\newline
+    \(\displaystyle
+      \curl\vb E = 0
+    \) \\\\
+    Konstante $k$
+    &
+    \(\displaystyle
+      k=\frac{1}{4\pi \epsilon_0}\quad (\text{SI}) \newline
+      k=1\quad (\text{Gauß})
+    \)
+  \end{tabular}
+  
+  \noindent
+  \begin{tabular}{p{3cm}p{5cm}}
+    Pot.\ einer Ladungsverteilung*
+    &
+    \(\displaystyle
+      \phi(\vr)=k\int d^3r' \frac{\rho(\vr')}{\rr}
+    \)
+    \\\\
+    E-Feld einer Ladungsverteilung*
+    &
+    \(\displaystyle
+        \vb E(\vr)=k\int d^3r' \rho(\vr')\frac{(\vr-\vr')}{\rr^3}
+    \)\\\\
+    Pot.\ einer Punktladung*
+    &
+    \(\displaystyle
+    \phi(\vr) = k \frac{Q}{\abs{\vr-\vr_0}} 
+    \)\\\\
+    E-Feld einer Punktladung*
+    &
+    \(\displaystyle
+    \vb E(\vr) = kQ \frac{\vr-\vr_0}{\abs{\vr-\vr_0}^3} 
+    \)\\\\
+  \end{tabular}
+  * (Bei verschwindende Randbedingungen)
 \end{multicols}
-
 \subsection{Multipolentwicklung}%
+  \noindent
+  \begin{tabular}{p{4.5cm}p{12cm}}
+    Grundlegende Entwicklung (Karthesisch)
+    & 
+    \(\displaystyle
+      \frac{1}{\rr}\bigg|_{\vr\gg\vr'} 
+      \approx \frac{1}{r} + \frac{\vr'\cdot\vr}{r^3} + \frac{1}{2}
+      \sum_{i,j=1}^{3} \frac{3r_i'r_j'-\delta_{ij}\vr'^2}{r^5}r_ir_j 
+    \)\\\\
+    Karthesische Multipolentwicklung
+    & 
+    \(\displaystyle
+    \phi(\vr)
+    \approx k\frac{Q}{r} + k\frac{\vb*p\cdot\vr}{r^3} + \frac{k}{2}
+    \sum_{i,j=1}^{3} \frac{Q_{ij}}{r^5}r_ir_j 
+    \)\\\\
+    Karthesische Multipolmomente
+    &
+    \(\displaystyle
+      Q = \int d^3r' \rho(r')
+    \)\newline
+    \(\displaystyle
+      \vb*p = \int d^3r'\vr' \rho(r')
+    \)\newline
+    \(\displaystyle
+      Q_{ij} = \int d^3r'(3r_i'r_j'-\delta_{ij}\vr'^2) \rho(r')
+    \)\\\\
+    Grundlegende Entwicklung (Kugelfl.fkt.)
+    &
+    \(\displaystyle
+    \frac{1}{\abs{\vb*r-\vb*r'}}
+    =
+    \sum_{lm} \frac{4\pi}{2l+1} \frac{r_<^l}{r_>^{l+1}}
+    Y^*_{lm}(\Omega')Y_{lm}(\Omega)\newline r_>=\max(r,r')\ r_<=\min(r,r')
+    \)\\\\
+    Kugelfl. Entwicklung Nah am Ursprung
+    &
+    \(\displaystyle
+    \phi(\vb*r) 
+    = k\sum_{lm} \frac{4\pi}{2l+1}r^l q_<^{lm} Y_{lm}(\Omega) 
+    \quad q_<^{lm}=\int_0^\infty dr' {r'}^{1-l}
+  \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r')
+    \)\\
+    Kugelfl. Entwicklung Weit weg vom Ursprung
+    &
+    \(\displaystyle
+    \phi(\vb*r) 
+    = k\sum_{lm} \frac{4\pi}{2l+1} 
+    \frac{q_>^{lm}}{r^{l+1}} Y_{lm}(\Omega)\quad
+    q_>^{lm}=\int_0^\infty dr' {r'}^{l+2}
+    \int_\Omega d\Omega' Y^*_{lm}(\Omega')\rho(\vb*r')
+    \)\\\\
+  \end{tabular}
+   
+  \noindent
+  
 
 \subsection{Verhalten von Elektrostatische Felder an Randflächen}%
 
