adds minor changes to coulombs law

--- a/subtex/elektrostatik/elektrisches-feld-und-elektrisches-potential.tex
+++ b/subtex/elektrostatik/elektrisches-feld-und-elektrisches-potential.tex
@@ -20,7 +20,8 @@ Oder in bekanntere Form (nicht vektoriell, Punktladungen auf Abstand r)
 \end{equation*}
 wobei $\vb F_{1\to2}$ die Kraft ist, die Teilchen 1 auf Teilchen 2 ausübt. 
 Sei $q_1q_2>0$ so wirkt die Kraft abstoßend, 
-und sei $q_1q_2<0$, so wirkt sie natürlich anziehend.
+und sei $q_1q_2<0$, so wirkt sie anziehend. Diese Gleichung wird auch das
+\textbf{Coulomb-Gesetz} genannt. 
 
 \noindent
 Die Elektrische Kraft ist eine Zentralkraft und deswegen 
