--- a/subtex/elektrostatik/randflaechen.tex
+++ b/subtex/elektrostatik/randflaechen.tex
@@ -3,7 +3,7 @@ In diesem Kapitel überlegen wir uns, wie Elektrische Felder sich an
 Vektorkalkulus folgenden \textbf{Satz von Gauß} und \textbf{Satz von Stokes}
 näher betrachten.
 
-\subsubsection{Randflächen und Randkurven}%
+\subsection{Randflächen und Randkurven}%
 
 Eine \textbf{Randfläche} ist ganz allgemein eine Fläche im Raum die Zwei 
 Raumgebiete trennt, z.B. trennt die Randfläche einer Kugel das innere der
@@ -15,7 +15,7 @@ Dielektrika oder Ränder von Ladungsverteilungen.
 
 Eine \textbf{Randkurve} ist eine Kurve die eine Oberfläche abschließt. 
 
-\subsubsection{Bedeutung der Sätze von Gauß und Stokes für Elektrostatische 
+\subsection{Bedeutung der Sätze von Gauß und Stokes für Elektrostatische 
 Felder}%
 Zunächst wiederholen wir wie die Sätze mathematisch ganz 
 allgemein aussehen.\\
@@ -72,7 +72,7 @@ Folgen direkt die Folgende Aussagen
   \end{split}
 \end{equation}
 
-\subsubsection{Anwendung auf Randflächen}%
+\subsection{Anwendung auf Randflächen}%
 \label{ssub:anwendungen-auf-randflaechen}
 Man kann nun eine allgemeine Randfläche im Raum betrachten. Legt man ein
 kleines Kästchen (Volumen) auf der Rand, zentriert um dem Rand --- also ein
